src/app/custom-form-control/select/select.component.scss
:host {
  display: flex;
  justify-content: flex-start;
  flex-direction: column;
  border: var(--color-text, #ccc) solid 2px;
  padding: 5px 10px;
  box-sizing: border-box;
  width: 100%;
  height: 100%;
  border-radius: var(--border-radius, 10px);
  min-width: 250px;
  &:hover {
    cursor: pointer;
    background-color: var(--color-background, #eceff1);
    .selected-value {
      transform: scale(0.9);
    }
  }
}
.label {
  font-size: 13px;
  font-weight: 800;
  color: var(--color-text);
}

.control {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
}

.selected-value {
  font-size: 16px;
  margin-right: 15px;
  transition: transform 0.2s;
  transform-origin: left;
  width: 100%;
  &.empty {
    opacity: 0.6;
  }
}

.panel {
  min-width: 250px;
  padding: 5px 10px;
  box-sizing: border-box;
  border-radius: var(--border-radius, 10px);
  border: var(--color-text, #ccc) solid 2px;
  background-color: #fff;
  transform-origin: top;
  min-height: 150px;
}

.clear-button {
  font-size: 10px;
  background-color: transparent;
  padding: 1px 3px;
  border: none;
  width: 40px;
  margin: 0 3px;
  font-weight: 300;
  opacity: 0.7;

  &:hover {
    background-color: var(--color-background-darker, "#cfd8dc");
    opacity: 1;
  }
}

